--- a/public/css/app.css
+++ b/public/css/app.css
@@ -667,7 +667,7 @@ progress {
   display: flex;
   flex-wrap: wrap;
   margin-top: calc(-1 * var(--bs-gutter-y));
-  margin-right: calc(-0.5 * var(--bs-gutter-x));
+  /* margin-right: calc(-0.5 * var(--bs-gutter-x)); */
   margin-left: calc(-0.5 * var(--bs-gutter-x));
 }
 .row > * {
@@ -11561,3 +11561,192 @@ textarea.form-control-lg {
     box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
   }
 }
+
+.product-wrap {
+  width: 300px;
+  text-align: center;
+  margin: 20px;
+  background: wheat;
+}
+.product-image {
+  position: relative;
+  overflow: hidden;
+}
+.product-image a {
+  display: block;
+}
+.product-image img {
+  display: block;
+  width: 100%;
+}
+.shadow {
+  background: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: .3s ease-in-out;
+}
+.product-wrap:hover .shadow {
+  opacity: 1;
+}
+.detail-link {
+  text-decoration: none;
+  width: 50px;
+  height: 50px;
+  background: #ff7659;
+  border-radius: 3px;
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  top: 50px;
+  transform: translate(-50%, -50%) rotate(45deg);
+  transition: .3s ease-in-out;
+}
+.detail-link:before {
+  content: "\f06e";
+  font-family: FontAwesome;
+  color: wheat;
+  font-size: 20px;
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  width: 50px;
+  transform: rotate(-45deg);
+  transition: .3s ease-in-out;
+}
+.product-wrap:hover .detail-link {
+  opacity: 1;
+  top: 50%;
+}
+.actions {
+  width: 100%;
+  height: 47px;
+  position: absolute;
+  bottom: -47px;
+  right: 0;
+  opacity: 0;
+  transition: 0.5s ease-in-out;
+}
+.product-wrap:hover .actions {
+  bottom: 0;
+  opacity: 1;
+}
+.actions-btn {
+  float: right;
+}
+.actions-btn a {
+  display: inline-block;
+  background: wheat;
+  color: #555;
+  width: 47px;
+  height: 47px;
+  line-height: 47px;
+  text-decoration: none;
+  transition: .3s ease-in-out;
+}
+.actions-btn a:hover {
+  background: #ff7659;
+  color: wheat;
+}
+.actions-btn a:after {
+  font-family: FontAwesome;
+  font-size: 14px;
+}
+.add-to-cart:after {
+  content: "\f07a";
+}
+.add-to-wishlist:after {
+  content: "\f004";
+}
+.add-to-compare:after {
+  content: "\f079";
+}
+.product-list {
+  margin: 20px 0;
+  font-family: 'Open Sans', serif;
+}
+.product-list h3 {
+  color: #555;
+  font-size: 15px;
+}
+.price {
+  font-weight: bold;
+  font-size: 18px;
+  color: #ff7659;
+}
+
+/* table.iksweb{
+  text-decoration: none;
+  border-collapse:collapse;
+  width:100%;
+  text-align:left;
+}
+
+table.iksweb th{
+  font-weight:normal;
+  font-size:15px;
+   color:#ffffff;
+  background-color:#354251;
+}
+
+table.iksweb td{
+  font-size:13px;
+  color:#354251;
+}
+
+table.iksweb td,table.iksweb th{
+  white-space:pre-wrap;
+  padding:10px 10px;
+  line-height:13px;
+  vertical-align: middle;
+  border: 0px solid #354251;
+}
+	table.iksweb tr:hover{
+  background-color:#f9fafb
+}
+
+table.iksweb tr:hover td{
+  color:#354251;
+  cursor:default;
+} */
+
+
+
+.tftable {
+  font-size:12px;
+  color:#fbfbfb;
+  width:80%;
+  border-width: 0px;
+  border-color: #686767;
+  border-collapse: collapse;
+}
+
+.tftable th {
+  font-size:12px;
+  background-color:#171515;
+  border-width: 0px;
+  padding: 8px;
+  border-style: solid;
+  border-color: #686767;
+  text-align:left;
+}
+
+.tftable tr {
+  background-color:#2f2f2f;
+}
+
+.tftable td {
+  font-size:12px;
+  border-width: 0px;
+  padding: 8px;
+  border-style: solid;
+  border-color: #686767;
+}
+
+.tftable tr:hover {
+  background-color:#171515;
+}
+
